--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.5.4",
     "graphql-cli": "^3.0.14",
+    "jsonwebtoken": "^8.5.1",
     "prisma-binding": "^2.3.15"
   }
 }
