--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "scripts": {
-    "start": "./node_modules/.bin/nodemon server/.bin/www --ext js,graphql --exec babel-node",
-    "get-schema": "graphql get-schema -p prisma"
+    "server": "./node_modules/.bin/pm2 start server/.bin/www --interpreter babel-node",
+    "stop-server": "./node_modules/.bin/pm2 kill",
+    "monit-server": "./node_modules/.bin/pm2 monit",
+    "get-schema": "./node_modules/.bin/graphql get-schema -p prisma",
+    "prisma-deploy": "./node_modules/.bin/prisma deploy && npm run get-schema",
+    "start": "bash server.sh"
   },
   "dependencies": {
     "apollo-server-express": "^2.9.3",
@@ -13,7 +17,7 @@
     "graphql": "^14.5.4",
     "graphql-cli": "^3.0.14",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^1.19.2",
+    "pm2": "^3.5.1",
     "prisma-binding": "^2.3.15"
   }
 }
