--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "server": "./node_modules/.bin/pm2 start server/.bin/www --interpreter babel-node",
+    "server": "./node_modules/.bin/pm2 start server/.bin/www",
+    "pm2": "./node_modules/.bin/pm2",
     "stop-server": "./node_modules/.bin/pm2 kill",
     "monit-server": "./node_modules/.bin/pm2 monit",
     "get-schema": "./node_modules/.bin/graphql get-schema -p prisma",
@@ -9,9 +10,6 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.9.3",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.5.4",
