--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql-cli": "^3.0.14",
     "jsonwebtoken": "^8.5.1",
     "pm2": "^3.5.1",
+    "prisma": "^1.34.8",
     "prisma-binding": "^2.3.15"
   }
 }
